<resources>
    <string name="app_name">TRComics - Manga &amp; Webtoon Oku</string>
    <string name="trendler">Trendler</string>
    <string name="image_for_banner">image for banner</string>
    <string name="empty">Empty</string>
    <string name="description"> <u>Açıklama:</u> </string>
    <string name="genresTitle"> <u>Türler:</u> </string>
    <string name="addFavorite">Ekle</string>
    <string name="author"> <u>Yazar:</u> </string>
    <string name="Date"> <u>Tarih:</u> </string>
    <string name="Home">Anasayfa</string>
    <string name="favs">Favoriler</string>
    <string name="about">Hakkında</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="discord">Discord</string>
    <string name="favorilerim">Favorilerim</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="log_out">Çıkış yap</string>
    <string name="password_hint">Şifre</string>
    <string name="e_mail">E-Posta</string>
    <string name="log_in">Giriş Yap</string>
    <string name="just_sign_up"><u>Kayıt ol!</u></string>
    <string name="just_sign_in"><u>Giriş yap!</u></string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="password_twice">Şifre Tekrarı</string>
    <string name="already_has_account">Zaten hesabın var mı?</string>
    <string name="login">Kullanıcı Girişi</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="empty_userName">Username</string>
    <string name="unkown">Belirsiz</string>
    <string name="loading">Yükleniyor...</string>
    <string name="rememberMe">Beni Hatırla</string>
    <string name="e_posta">E-Posta:</string>
    <string name="register_date">Kayıt Tarihi:</string>
    <string name="personal_information">Kişisel Bilgiler</string>
    <string name="episodes"> <u>Bölümler</u> </string>
    <string name="verify_circumstance">Onay Durumu:</string>
</resources>