<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/Home"/>

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/favorite"
            android:title="@string/favs"/>

        <item
            android:id="@+id/nav_discord"
            android:icon="@drawable/discord_icon"
            android:title="@string/discord"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about"/>


    </group>


 <item
     android:title="">
     <menu>

         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/logout_icon"
             android:title="@string/log_out"
             android:visible="false"/>


         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/baseline_login_24"
             android:title="@string/sign_in"/>

          <item
              android:id="@+id/nav_register"
              android:icon="@drawable/baseline_person_register_24"
              android:title="@string/sign_up"/>

     </menu>
 </item>

</menu>