<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darken2"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="25dp"
        android:gravity="start"
        android:paddingStart="25dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="6dp"
        android:hint="@string/user_name"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterTextColor="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:helperText="Zorunlu*"
        app:helperTextTextColor="@color/rose"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/baseline_person_outline_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#38304c"
            android:inputType="none"
            android:maxLength="20"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="6dp"
        android:hint="@string/e_mail"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:helperText="Zorunlu*"
        app:helperTextTextColor="@color/rose"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/baseline_mail_outline_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#38304c"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="6dp"
        android:hint="@string/password_hint"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:helperText="Zorunlu*"
        app:helperTextTextColor="@color/rose"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/password_icon"
        app:startIconTint="@color/white">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#38304c"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTwiceLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:elevation="6dp"
        android:hint="@string/password_twice"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:counterTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:helperText="Zorunlu*"
        app:helperTextTextColor="@color/rose"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/password_icon"
        app:startIconTint="@color/white">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerTwicePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#38304c"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/registerProgress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingEnd="15dp"
        android:visibility="gone"
        tools:ignore="RtlSymmetry" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:backgroundTint="@color/aqua"
        android:gravity="center"
        android:maxLines="1"
        android:padding="0dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:rippleColor="@color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:text="@string/already_has_account"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/toLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:text="@string/just_sign_in"
            android:textColor="@color/aqua"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


</LinearLayout>