<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b1c21"
    android:backgroundTint="#1b1c21"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#272832"
        android:backgroundTint="#272832"
        android:orientation="horizontal"
        android:paddingTop="10dp">


        <ImageView
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/date_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/date_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/Date"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_shape_section"
        android:backgroundTint="#272832"
        android:orientation="horizontal"
        android:paddingBottom="15dp">


        <ImageView
            app:tint="@color/white"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/author_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/author_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/author"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">


        <ImageView
            app:tint="@color/white"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/genres_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/genresTitle"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_genre"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <ImageView
            app:tint="@color/white"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/description_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:padding="7dp"
        android:scrollbars="vertical"
        android:text="@string/empty"
        android:textColor="#c1c2c3"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>